add environment file

--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -49,6 +49,7 @@ jobs:
     - name: Run Your Tests or Build
       run: |
         # test commands here
+        echo ""
 
     - name: Deactivate Conda Environment
       run: conda deactivate
