--- a/.github/workflows/test-conda.yml
+++ b/.github/workflows/test-conda.yml
@@ -24,18 +24,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Conda
-      run: |
-        if [ "${{ runner.os }}" == "Windows" ]; then
-          choco install miniconda3 --params="'/AddToPath:1'"
-          source $HOME/miniconda3/etc/profile.d/conda.sh
-        else
-          export MINICONDA=$HOME/miniconda3
-          export PATH=$MINICONDA/bin:$PATH
-          hash -r
-          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-${{ runner.os }}-x86_64.sh -O miniconda.sh
-          bash miniconda.sh -b -p $MINICONDA
-        fi
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: ${{ matrix.python-version }}
 
     - name: Create Conda Environment
       run: conda env create -f distribution/conda/environment.yaml
